--- a/client/src/app/core/nav-bar/nav-bar.component.scss
+++ b/client/src/app/core/nav-bar/nav-bar.component.scss
@@ -10,3 +10,22 @@
     top: -10px;
     right: 32px;
 }
+
+a {
+    text-decoration: none;
+    color: #343a40;
+
+    &.active {
+        color:orange;
+    }
+}
+
+.logo
+{
+    cursor: pointer;
+
+    &.focus
+    {
+        outline: none;
+    }
+}
