--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
     <section class="col-3">
+      <ng-container *ngIf="brands && productTypes">
       <h5 class="text-warning ml-2">Brands</h5>
       <select
         class="custom-select my-2 mb-2"
@@ -34,6 +35,7 @@
           {{ item.name }}
         </li>
       </ul>
+    </ng-container>
     </section>
 
     <section class="col-9">
@@ -43,7 +45,7 @@
           [pageSize] = "this.shopParams.pageSize"
           [pageNumber] = "this.shopParams.pageNumber"
         ></app-paging-header>
-        <div class="form-inline mt-2">
+        <div class="form-inline mt-2" *ngIf="products">
           <input
             (keyup.enter) = "onSearch()"
             class="form-control"
