--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,4 +1,5 @@
-    <carousel>
+   <div class="container" style="margin-top: 120px;">
+    <carousel >
         <slide>
             <img src="assets/images/hero1.jpg" alt="first slide" style="display: block; width: 100%;">
         </slide>
@@ -14,3 +15,6 @@
             <h1>Welcome to the shop</h1>
         </div>
     </section>
+
+   </div>
+   
